<?xml version="1.0"?>
<package format="2">
  <name>rov_surface</name>
  <version>1.0.0</version>
  <description>This package is intended to run at the driving station.</description>

  <maintainer email="yehya_elmasry20@yahoo.com">Yehya Elmasry</maintainer>

  <license>BSD</license>

  <author email="yehya_elmasry20@yahoo.com">Yehya Elmasry</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
